[gd_scene load_steps=6 format=3 uid="uid://dw27j1r6dktr1"]

[ext_resource type="Script" uid="uid://7diyneorc6cc" path="res://scenes/ui/health_bar_ui.gd" id="1_ne3p4"]
[ext_resource type="PackedScene" uid="uid://kh5x4d2lti7e" path="res://scenes/ui/health_ui.tscn" id="1_v12qd"]
[ext_resource type="Texture2D" uid="uid://dh8lyqfw6ma3c" path="res://art/sprites/icons/1.png" id="2_cvvog"]
[ext_resource type="Texture2D" uid="uid://oe7v35ii8vrs" path="res://art/tile_0102.png" id="3_airt5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cvvog"]

[node name="HealthBarUI" type="PanelContainer"]
custom_minimum_size = Vector2(100, 10)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -5.0
offset_right = 142.0
offset_bottom = 21.0
grow_vertical = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_cvvog")
script = ExtResource("1_ne3p4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -6

[node name="Icon" type="Sprite2D" parent="VBoxContainer"]
unique_name_in_owner = true
position = Vector2(-12, 7)
texture = ExtResource("2_cvvog")
flip_h = true

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = -1

[node name="HealthUI" parent="VBoxContainer/HBox" instance=ExtResource("1_v12qd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
show_max_hp = true
bar_type = true

[node name="Block" type="HBoxContainer" parent="VBoxContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = -2
alignment = 1

[node name="BlockImage" type="TextureRect" parent="VBoxContainer/HBox/Block"]
layout_mode = 2
texture = ExtResource("3_airt5")
stretch_mode = 5

[node name="BlockLabel" type="Label" parent="VBoxContainer/HBox/Block"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "888"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusIcons" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 8
columns = 10

[node name="Fainted" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
text = "Fainted"
horizontal_alignment = 1
vertical_alignment = 1
